// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/ScrollBar with default props 1`] = `
<Track
  axis="y"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    scale={1}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar with knobs 1`] = `
<ScrollBar
  axis="y"
  overflow="auto"
  progress={0}
  scale={2}
  style={
    Object {
      "height": "400px",
      "margin": "25vh",
    }
  }
/>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0 1`] = `
<Track
  axis="y"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    scale={2}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.5 1`] = `
<Track
  axis="y"
  progress={0.5}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.5}
    scale={2}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.25 1`] = `
<Track
  axis="y"
  progress={0.25}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.25}
    scale={2}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.75 1`] = `
<Track
  axis="y"
  progress={0.75}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.75}
    scale={2}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 1 1`] = `
<Track
  axis="y"
  progress={1}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={1}
    scale={2}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0 1`] = `
<Track
  axis="y"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    scale={10}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.5 1`] = `
<Track
  axis="y"
  progress={0.5}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.5}
    scale={10}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.25 1`] = `
<Track
  axis="y"
  progress={0.25}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.25}
    scale={10}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.75 1`] = `
<Track
  axis="y"
  progress={0.75}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={0.75}
    scale={10}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 1 1`] = `
<Track
  axis="y"
  progress={1}
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <ThumbContainer
    axis="y"
    progress={1}
    scale={10}
  >
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="start"
    />
    <ThumbSegment
      axis="y"
      position="middle"
    />
    <ThumbSegment
      axis="y"
      dragSignifier={true}
      position="end"
    />
  </ThumbContainer>
</Track>
`;
